<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:background="@drawable/background_img"
    >

    <Button
        android:id="@+id/btn_toCovid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

    </Button>

    <LinearLayout
        android:layout_width="310sp"
        android:layout_height="460dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_toCovid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/profession_text"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="399dp">

            <RadioButton
                android:id="@+id/profession1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_transport" />

            <RadioButton
                android:id="@+id/profession2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service" />

            <RadioButton
                android:id="@+id/profession3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher" />

            <RadioButton
                android:id="@+id/profession4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policeman" />

            <RadioButton
                android:id="@+id/profession5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firefighter" />

            <RadioButton
                android:id="@+id/profession6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/healthcare" />

            <RadioButton
                android:id="@+id/profession7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sales" />

            <RadioButton
                android:id="@+id/profession8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citizenship_other" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>