<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:paddingTop="60dp"


    tools:context=".ui.registration.PersonalInfoFragment">


    <Button
        android:id="@+id/btn_toSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

    </Button>

    <LinearLayout
        android:layout_width="310sp"
        android:layout_height="463dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_toSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_text"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/vaccine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/vaccine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_astra" />

            <RadioButton
                android:id="@+id/vaccine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_pfizer" />

            <RadioButton
                android:id="@+id/vaccine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_sinovac" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_text"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/sarajevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_sarajevo" />

            <RadioButton
                android:id="@+id/banjaluka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_banjaluka" />

            <RadioButton
                android:id="@+id/mostar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_mostar" />

            <RadioButton
                android:id="@+id/tuzla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_tuzla" />
        </RadioGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>