<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:background="@drawable/background_img"
    >

    <Button
        android:id="@+id/btn_toProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

    </Button>

    <LinearLayout
        android:layout_width="310sp"
        android:layout_height="217dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_toProfession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citizenship"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <RadioButton
                android:id="@+id/citizenshipBH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citizenship_bh" />

            <RadioButton
                android:id="@+id/citizenshipOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citizenship_other" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>